--- a/Kanox.html
+++ b/Kanox.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/header/logo-head - Copy.png"
+    />
     <title>KANOX</title>
     <link rel="stylesheet" href="Kanox.css" />
     <!-- META TAGS -->
@@ -315,7 +320,7 @@
         </div>
       </section>
 
-      <!-- Block Section -->
+      <!-- Blog Section -->
       <section class="blog">
         <div class="blogh1">LATEST NEWS</div>
         <br />
