Removed divs for heading and used h2 tag

--- a/Kanox.html
+++ b/Kanox.html
@@ -81,7 +81,7 @@
       <section class="features">
         <div class="features_heading">
           <h1>OUR FEATURES</h1>
-          <div class="heading2">Building brands with purpose</div>
+          <h2 class="heading2">Building brands with purpose</h2>
         </div>
         <div class="features_row">
           <div class="column">
@@ -131,10 +131,10 @@
         </aside>
         <article class="about_article">
           <h1>ABOUT OUR COMPANY</h1>
-          <div class="about_heading">
+          <h2 class="about_heading">
             Make the customer the hero of your <br />
             story
-          </div>
+          </h2>
 
           <h3>
             He hath his earth firmament air very itself light day moring morning
@@ -322,9 +322,9 @@
 
       <!-- Blog Section -->
       <section class="blog">
-        <div class="blogh1">LATEST NEWS</div>
+        <h1 class="blogh1">LATEST NEWS</h1>
         <br />
-        <div class="blogh2">We Have True Story</div>
+        <h2 class="blogh2">We Have True Story</h2>
 
         <div class="blog_row">
           <a href="">
